# presentation-gen

./: .gitignore  COPYING  LICENSE  Makefile  presentation-gen.cabal
presentations/hermit-tfp13/: Makefile  galois-apr-13.txt  hermit-tfp13.md  my.slidy
presentations/hermit-tfp13/examples/: Fib.hs
presentations/sunroof-tfp13/: sunroof-tfp13.css  sunroof-tfp13.md
resources/css/theme/: ku-fpg.css
resources/plugin/highlight/: highlight.pack.js
src/: Main.hs  Makefile  MetaParser.hs  SlideCreator.hs
src/PresentationGen/: MetaParser.hs  Render.hs  Types.hs  Util.hs
